# EchoChat

./: .gitignore  CMakeLists.txt  build.sh
include/: my_macros.hpp
include/app/: app.hpp  thread.hpp  user.hpp
include/network/: network.hpp
src/: CMakeLists.txt  echochat.cpp  main.cpp  strlen.cpp
src/app/: app.cpp  user.cpp
src/network/: network.cpp
